--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -26,8 +26,8 @@
   "content_scripts": [
     {
       "matches": ["http://*/*","https://*/*"],
-      "css": ["styles.css"],
-      "js": ["/scripts/thirdParty/jquery-3.5.1.min.js", "/scripts/thirdParty/materialize.js", "content.js"],
+      "css": ["styles.css", "jquery-ui.min.css", "jquery-ui.structure.css"],
+      "js": ["/scripts/thirdParty/jquery-3.5.1.min.js", "/scripts/thirdParty/materialize.js","/scripts/thirdParty/jquery-ui.min.js", "content.js"],
       "all_frames": true
     }
   ],
