--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -27,7 +27,7 @@
     {
       "matches": ["http://*/*","https://*/*"],
       "css": ["styles.css", "jquery-ui.min.css", "jquery-ui.structure.css"],
-      "js": ["/scripts/thirdParty/jquery-3.5.1.min.js", "/scripts/thirdParty/materialize.js","/scripts/thirdParty/jquery-ui.min.js", "content.js"],
+      "js": ["/scripts/thirdParty/jquery-3.5.1.min.js", "/scripts/thirdParty/materialize.js","/scripts/thirdParty/jquery-ui.min.js", "content.js", "/scripts/tip.js"],
       "all_frames": true
     }
   ],
